<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Connect 4</string>

    <string name="reset">Reset</string>
    <string name="undo">Undo</string>
    <string name="turn">Turn:</string>
    <string name="winner">Winner!</string>
    <string name="draw">Draw!</string>
    <string name="play_with_friend">Play with Friend</string>
    <string name="play_with_machine">Play with Machine</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="color_frame">Color Frame</string>
    <string name="tonality">Tonality</string>
    <string name="final_project_of">Final project of</string>
    <string name="altice_academy">Altice Academy</string>
    <string name="error_loading_version_name">Error loading version name</string>
    <string name="statistics">Statistics</string>
    <string name="red_wins">Red Wins:</string>
    <string name="yellow_wins">Yellow Wins:</string>
    <string name="machine_wins">Machine Wins:</string>
    <string name="statistics_draw">Draw:</string>
    <string name="positive_button">OK</string>
    <string name="statistics_reseted">Statistics reseted</string>
    <string name="about_title">About</string>
    <string name="about_message">Developed by Robert Gomez.\nFinal project of Altice Academy.</string>
    <string name="about_positive_button">OK</string>
    <string name="about_neutral_button">Contact me</string>
    <string name="about_EXTRA_EMAIL">rrgt19@gmail.com</string>
    <string name="about_EXTRA_SUBJECT">Feedback for \"Connect 4\" application on Android</string>
    <string name="about_email_chooser_title">Send your email in:</string>
    <string name="about_email_intent_failed">There is no email client installed</string>
    <string name="winner_dialog_title">The winner is</string>

    <!-- - - - - - - - - - - - - - - -
          - Functions Preferences  -
          - - - - - - - - - - - - - - - -->

    <string name="pref_functions_title">Functions</string>

    <!-- Label for the play sound checkbox preference -->
    <string name="pref_play_sound_label">Play Sound</string>
    <!-- Key name for storing audio in SharedPreferences -->
    <string name="pref_play_sound_key" translatable="false">play_sound</string>

    <!-- Label for the vibrate checkbox preference -->
    <string name="pref_vibrate_label">Vibrate</string>
    <!-- Key name for storing vibrate in SharedPreferences -->
    <string name="pref_vibrate_key" translatable="false">vibrate</string>

    <!-- Summary for Checkboxes -->
    <string name="pref_play_true">On</string>
    <string name="pref_play_false">Off</string>

    <!-- - - - - - - - - - - - - - - -
          - Environment Preferences  -
          - - - - - - - - - - - - - - - -->

    <string name="pref_environment_title">Environment</string>

    <!-- Label for the background color preference -->
    <string name="pref_background_color_label">Background Color</string>
    <!-- Key name for the background color preference in SharedPreferences -->
    <string name="pref_background_color_key" translatable="false">background_color</string>

    <!-- Label for white background color preference -->
    <string name="pref_white_background_color_label">White</string>
    <!-- Label for black background color preference -->
    <string name="pref_black_background_color_label">Black</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_white_background_color_value" translatable="false">white_background_color</string>
    <!-- Value in SharedPreferences for yellow color option -->
    <string name="pref_black_background_color_value" translatable="false">black_background_color</string>

    <!-- Label for the table color preference -->
    <string name="pref_table_color_label">Table Color</string>
    <!-- Key name for table color preference in SharedPreferences -->
    <string name="pref_table_color_key" translatable="false">table_color</string>

    <!-- Label for blue table color preference -->
    <string name="pref_blue_table_color_label">Blue</string>
    <!-- Label for gray table color preference -->
    <string name="pref_gray_table_color_label">Gray</string>
    <!-- Label for green table color preference -->
    <string name="pref_green_table_color_label">Green</string>

    <!-- Value in SharedPreferences for blue table color option -->
    <string name="pref_blue_table_color_value" translatable="false">blue_table_color</string>
    <!-- Value in SharedPreferences for gray table color option -->
    <string name="pref_gray_table_color_value" translatable="false">gray_table_color</string>
    <!-- Value in SharedPreferences for green table color option -->
    <string name="pref_green_table_color_value" translatable="false">green_table_color</string>

    <!-- - - - - - - - - - - - - - - -
          - Player Preferences  -
          - - - - - - - - - - - - - - - -->

    <string name="pref_player_title">Player</string>

    <!-- Label for the color preference -->
    <string name="pref_first_player_label">Who Starts?</string>
    <!-- Key name for color preference in SharedPreferences -->
    <string name="pref_color_key" translatable="false">color</string>

    <!-- Label for red color preference -->
    <string name="pref_red_label">Red</string>
    <!-- Label for blue color preference -->
    <string name="pref_yellow_label">Yellow</string>

    <!-- Value in SharedPreferences for red color option -->
    <string name="pref_color_red_value" translatable="false">red</string>
    <!-- Value in SharedPreferences for yellow color option -->
    <string name="pref_color_yellow_value" translatable="false">yellow</string>

    <!-- - - - - - - - - - - - - - - -
          - Statistics SharedPreferences  -
          - - - - - - - - - - - - - - - -->

    <string name="sharedPref_red_wins_key" translatable="false">red_wins</string>
    <string name="sharedPref_yellow_wins_key" translatable="false">yellow_wins</string>
    <string name="sharedPref_machine_wins_key" translatable="false">machine_wins</string>
    <string name="sharedPref_draw_key" translatable="false">draw</string>

</resources>