<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoConnect4ImageView"
        android:layout_width="200dp"
        android:layout_height="155dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo_border"
        android:padding="3dp"
        android:src="@drawable/logo_connect4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/playWithFriendButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_play_button"
            android:text="@string/play_with_friend" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/playWithFriendButton"
            android:drawableLeft="@drawable/icon_settings_button"
            android:text="@string/settings" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom">

        <TextView
            android:id="@+id/finalProjectOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/final_project_of" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/finalProjectOf"
            android:background="@drawable/logo_altice_academy" />

    </RelativeLayout>

</LinearLayout>